--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
 loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # A URL to refer people to when problems occur with this mod
-issueTrackerURL="http://my.issue.tracker/" #optional
+#issueTrackerURL="https://github.com/Theta-Dev/ConstructionWand" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
@@ -20,16 +20,22 @@ displayName="Construction Wand" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 #updateJSONURL="" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-#displayURL="" #optional
+displayURL="https://github.com/Theta-Dev/ConstructionWand" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="examplemod.png" #optional
+logoFile="logo.png" #optional
 # A text field displayed in the mod UI
-credits="Thanks for this example mod goes to Java" #optional
+#credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
 authors="ThetaDev" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 Construction Wands make building easier!
+
+With a Construction Wand you can place multiple blocks (up to 1024) at once, extending you build on the side you're facing.
+Sneak+Right click to activate angel mode which allows you to place a block at the opposite side of the block facing you.
+If you concentrate enough, you can even conjure a block in mid air!
+
+This is my first minecraft mod. May the odds be ever in your favor!
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.examplemod]] #optional
