--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.1.0'
+version = '1.15-1.0'
 group = 'thetadev.constructionwand' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'constructionwand'
 
