--- a/build.gradle
+++ b/build.gradle
@@ -100,12 +100,11 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.14.4-28.2.23'
 
-    //runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-32.160")
-    //runtimeOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.15.2-2.0.2.4")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.14.4-1.1-25.135")
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.14.4-1.0.6.1")
 
     compileOnly fg.deobf("vazkii.botania:Botania:r1.11-379.354:api")
-
-    //runtimeOnly fg.deobf("vazkii.botania:Botania:r1.15-387.455")
+    runtimeOnly fg.deobf("vazkii.botania:Botania:r1.11-379.354")
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
