--- a/build.gradle
+++ b/build.gradle
@@ -13,15 +13,25 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.16-1.2'
+version = '1.15-1.2'
 group = 'thetadev.constructionwand' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'constructionwand'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200723-1.16.1'
+    // The mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   Snapshot are built nightly.
+    // stable_#            Stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // Simply re-run your setup task after changing the mappings to update your workspace.
+    mappings channel: 'snapshot', version: '20200514-1.15.1'
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    
+    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
+    // Default run configurations.
+    // These can be tweaked, removed, or duplicated as needed.
     runs {
         client {
             workingDirectory project.file("run/client").canonicalPath
@@ -92,12 +102,14 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.1-32.0.108'
-    //runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16-39")
-    //runtimeOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.16.1-3.0")
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.31'
 
-    compileOnly fg.deobf("vazkii.botania:Botania:1.16-398:api")
-    //runtimeOnly fg.deobf("vazkii.botania:Botania:1.16-398")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-32.160")
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.15.2-2.0.2.4")
+
+    compileOnly fg.deobf("vazkii.botania:Botania:r1.15-387.455:api")
+
+    runtimeOnly fg.deobf("vazkii.botania:Botania:r1.15-387.455")
 }
 
 jar {
