Added block randomization, ReplacementRegistry

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,14 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+author=thetadev
+modid=constructionwand
+
+mcversion=1.16.2
+forgeversion=33.0.60
+mcp_mappings=20200723-1.16.1
+
+botania=1.16.2-405
+
+version_major=1
+version_minor=3
