--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -26,6 +26,6 @@ This is my first minecraft mod. May the odds be ever in your favor.
 [[dependencies.constructionwand]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.2]"
+    versionRange="[1.16.2, 1.16.3]"
     ordering="NONE"
     side="BOTH"
