Changed version to 1.15

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-mcversion=1.16.2
-forgeversion=33.0.60
-mcp_mappings=20200723-1.16.1
+mcversion=1.15.2
+forgeversion=31.2.31
+mcp_mappings=20200514-1.15.1
 
-botania=1.16.2-405
+botania=r1.15-387.455
 
 version_major=1
 version_minor=3
