--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,10 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-mcversion=1.16.4
-forgeversion=35.0.2
+#mcversion=1.16.4
+#forgeversion=35.0.2
+mcversion=1.16.2
+forgeversion=33.0.60
 mcp_mappings=20200723-1.16.1
 
 botania=1.16.2-405
