Setup fabric environment

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,15 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-#mcversion=1.16.4
-#forgeversion=35.0.2
-mcversion=1.16.2
-forgeversion=33.0.60
-mcp_mappings=20200723-1.16.1
+# Fabric Properties
+# check these on https://fabricmc.net/use
+minecraft_version=1.16.3
+yarn_mappings=1.16.3+build.17
+loader_version=0.10.0+build.208
 
-botania=1.16.2-405
+# Dependencies
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.22.0+build.408-1.16
 
 version_major=1
-version_minor=6
+version_minor=0
