Added keybind, included ModMenu

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ loader_version=0.10.0+build.208
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.22.0+build.408-1.16
 autoconfig_version=3.3.1
+modmenu_curse=3023985
 
 version_major=1
 version_minor=0
