--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,9 @@ group = "${author}.${modid}"
 archivesBaseName = "${modid}"
 
 repositories {
-	maven { url 'https://jitpack.io' }
+	maven {
+		url = "https://www.cursemaven.com"
+	}
 }
 
 dependencies {
@@ -25,6 +27,9 @@ dependencies {
 
 	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.autoconfig_version}"
 	include "me.sargunvohra.mcmods:autoconfig1u:${project.autoconfig_version}"
+
+	modImplementation "curse.maven:modmenu:${project.modmenu_curse}"
+	include "curse.maven:modmenu:${project.modmenu_curse}"
 }
 
 processResources {
