--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -25,7 +25,7 @@ This is my first minecraft mod. May the odds be ever in your favor.
     side="BOTH"
 [[dependencies.constructionwand]]
     modId="minecraft"
-    mandatory=true
-    versionRange="[1.16.2, 1.16.5]"
-    ordering="NONE"
+    mandatory = true
+versionRange = "[1.16.2, 1.17)"
+ordering = "NONE"
     side="BOTH"
