--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-
 author=thetadev
 modid=constructionwand
-
-mcversion=1.16.5
-forgeversion=36.0.46
-mcp_mappings=20200723-1.16.1
-
+mcversion=1.17.1
+forgeversion=37.0.19
+mcp_channel=official
+mcp_mappings=1.17.1
 botania=1.16.2-405
-
 version_major=2
 version_minor=2
