add JEI ingame documentation

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,9 +11,9 @@ authors="ThetaDev"
 description='''
 Construction Wands make building easier!
 
-With a Construction Wand you can place multiple blocks (up to 1024) at once, extending you build on the side you're facing.
-Sneak+Right click to activate angel mode which allows you to place a block at the opposite side of the block facing you.
-If you concentrate enough, you can even conjure a block in mid air!
+With a Construction Wand you can place multiple blocks (up to 1024) at once, extending your build on the side you're
+facing. If that's not enough: you can upgrade your wand with additional cores, allowing you to place a block
+behind the block you are facing, conjure blocks in mid air or destroy lots of blocks very fast.
 
 This is my first minecraft mod. May the odds be ever in your favor.
 '''
