--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,10 @@ repositories {
     maven {
         url = "https://maven.theillusivec4.top/"
     }
+    maven {
+        name = "JEI Maven"
+        url "https://dvs1.progwml6.com/files/maven"
+    }
 }
 
 dependencies {
@@ -98,12 +102,17 @@ dependencies {
             version: "${project.mcversion}-${project.forgeversion}"
     ])
 
+    compileOnly fg.deobf("mezz.jei:${jei_version}:api")
+    runtimeOnly fg.deobf("mezz.jei:${jei_version}")
+
+    /*
     compileOnly fg.deobf([
             group: "vazkii.botania",
             name: "Botania",
             version: "${project.botania}",
             classifier: "api"
     ])
+    */
 }
 
 jar {
