--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ mcversion=1.17.1
 forgeversion=37.0.73
 mcp_channel=official
 mcp_mappings=1.17.1
-botania=1.16.2-405
+# botania=1.16.2-405
+jei_version=jei-1.18:9.0.0.40
 version_major=2
 version_minor=4
