--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,18 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
 author=thetadev
 modid=constructionwand
+
 mcversion=1.17.1
 forgeversion=37.0.73
 mcp_channel=official
 mcp_mappings=1.17.1
+
+# Source: https://maven.blamejared.com/vazkii/botania/Botania/
 # botania=1.16.2-405
+# Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
 jei_version=jei-1.18:9.0.0.40
+
 version_major=2
 version_minor=4
