--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,9 @@ mcversion=1.16.5
 forgeversion=36.2.19
 mcp_mappings=20200723-1.16.1
 
+# Source: https://maven.blamejared.com/vazkii/botania/Botania/
 botania=1.16.2-405
+# Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
 jei_version=jei-1.16.5:7.7.1.137
 
 version_major=2
