--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,11 @@ author=thetadev
 modid=constructionwand
 
 mcversion=1.16.5
-forgeversion=36.0.46
+forgeversion=36.2.19
 mcp_mappings=20200723-1.16.1
 
 botania=1.16.2-405
+jei_version=jei-1.16.5:7.7.1.137
 
 version_major=2
 version_minor=4
