--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,9 @@ mcp_channel=official
 mcp_mappings=1.18.2
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
-# botania=1.16.2-405
+botania=1.18.2-430-SNAPSHOT
 # Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
 jei_version=jei-1.18.2:9.5.0.132
 
 version_major=2
-version_minor=6
+version_minor=7
