--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,14 @@ author=thetadev
 modid=constructionwand
 
 mcversion=1.18.1
-forgeversion=39.0.0
+forgeversion=39.1.0
 mcp_channel=official
 mcp_mappings=1.18.1
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
-# botania=1.16.2-405
+botania=1.18.1-429
 # Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
 jei_version=jei-1.18.1:9.1.0.41
 
 version_major=2
-version_minor=6
+version_minor=7
