--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-mcversion=1.18.2
-forgeversion=40.0.15
+mcversion=1.19
+forgeversion=41.1.0
 mcp_channel=official
-mcp_mappings=1.18.2
+mcp_mappings=1.19
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
 botania=1.18.2-430-SNAPSHOT
 # Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
-jei_version=jei-1.18.2:9.5.0.132
+jei_version=11.1.1.239
 
 version_major=2
 version_minor=7
