--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-mcversion=1.19.1
-forgeversion=42.0.9
+mcversion=1.19.2
+forgeversion=43.2.4
 mcp_channel=official
-mcp_mappings=1.19.1
+mcp_mappings=1.19.2
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
-botania=1.18.2-430-SNAPSHOT
+botania=1.19.2-437-FORGE
 # Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
-jei_version=11.2.0.244
+jei_version=11.5.0.297
 
 version_major=2
-version_minor=8
+version_minor=9
