--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ mcp_mappings=1.19.3
 botania=1.19.2-437-FORGE
 # Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
 jei_version=11.5.0.297
+jei_mcversion=1.19.2
 
 version_major=2
 version_minor=9
