ported to MC 1.19.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-mcversion=1.19.3
-forgeversion=44.1.16
+mcversion=1.19.4
+forgeversion=45.0.23
 mcp_channel=official
-mcp_mappings=1.19.3
+mcp_mappings=1.19.4
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
 botania=1.19.2-437-FORGE
 # Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
+jei_mcversion=1.19.3
 jei_version=12.2.0.16
 
 version_major=2
