ported to MC 1.20

--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,13 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
-apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
+
+plugins {
+    id 'eclipse'
+    id 'idea'
+    id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+}
 
 version = "${mcversion}-${version_major}.${version_minor}"
 group = "${author}.${modid}"
@@ -22,6 +25,11 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
     mappings channel: project.mcp_channel, version: project.mcp_mappings
+
+    // This property allows configuring Gradle's ProcessResources task(s) to run on IDE output locations before launching the game.
+    // It is REQUIRED to be set to true for this template to function.
+    // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
+    copyIdeResources = true
 
     runs {
         client {
@@ -113,10 +121,6 @@ repositories {
     }
     maven {
         url = "https://maven.theillusivec4.top/"
-    }
-    maven {
-        name = "JEI Maven"
-        url "https://dvs1.progwml6.com/files/maven"
     }
 }
 
