--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-mcversion=1.19.4
-forgeversion=45.0.23
+mcversion=1.20.1
+forgeversion=47.0.19
 mcp_channel=official
-mcp_mappings=1.19.4
+mcp_mappings=1.20.1
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
 botania=1.19.2-437-FORGE
-# Source: https://dvs1.progwml6.com/files/maven/mezz/jei/
-jei_version=13.1.0.2
+# Source: https://maven.blamejared.com/mezz/jei/
+jei_version=15.2.0.22
 
 version_major=2
 version_minor=11
