fix: Botania version

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ mcp_channel=official
 mcp_mappings=1.20.1
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
-botania=1.19.2-437-FORGE
+botania=1.20.1-441-FORGE-SNAPSHOT
 # Source: https://maven.blamejared.com/mezz/jei/
 jei_version=15.2.0.22
 
