--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.daemon=false
 author=thetadev
 modid=constructionwand
 
-mcversion=1.20.1
-forgeversion=47.0.19
+mcversion=1.20.2
+forgeversion=48.0.30
 mcp_channel=official
-mcp_mappings=1.20.1
+mcp_mappings=1.20.2
 
 # Source: https://maven.blamejared.com/vazkii/botania/Botania/
-botania=1.19.2-437-FORGE
+botania=1.20.1-441-FORGE-SNAPSHOT
 # Source: https://maven.blamejared.com/mezz/jei/
-jei_version=15.2.0.22
+jei_version=16.0.0.28
 
 version_major=2
 version_minor=11
